--- a/src/app/documents/documents.less
+++ b/src/app/documents/documents.less
@@ -119,6 +119,19 @@
         font-size: 0.9rem;
         margin-top: 0.25rem;
       }
+
+      small {
+        display: block;
+        margin-top: 0.25rem;
+        color: #7f8c8d;
+        font-size: 0.85rem;
+        font-style: italic;
+
+        &.no-projects-message {
+          color: #f39c12;
+          font-weight: 500;
+        }
+      }
     }
 
     // File upload styling for forms
